--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -39,7 +39,7 @@ test:
 
 about:
   home: https://mc-stan.org/users/interfaces/cmdstan.html
-  dev_url: https://github.com/stan-dev/cmdstan
+  dev_url: https://github.com/stan-dev/cmdstanpy
   doc_url: https://cmdstanpy.readthedocs.io
   summary: |
     CmdStanPy is a lightweight interface to Stan for Python users which
