--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,11 +21,11 @@ build:
 requirements:
   host:
     - pip
-    - python >=3.6
+    - python >=3.7
   run:
-    - python >=3.6
+    - python >=3.7
     - pandas
-    - numpy >=1.15,!=1.19.4
+    - numpy >=1.21
     - ujson
     - cmdstan
     - tqdm
