--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -29,6 +29,15 @@ requirements:
     - numpy >=1.15
     - ujson ==1.35
 
+test:
+  imports:
+    - cmdstanpy
+  commands:
+    - pip check
+    - install_cmdstan --help
+    - install_cxx_toolchain --help
+  requires:
+    - pip
 
 about:
   home: https://mc-stan.org/users/interfaces/cmdstan.html
