--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,13 +21,14 @@ build:
 requirements:
   host:
     - pip
-    - python >=3.7
+    - python >=3.8
   run:
-    - python >=3.7
+    - python >=3.8
     - pandas
     - numpy >=1.21
     - cmdstan
     - tqdm
+    - stanio
 
 
 about:
