--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -31,6 +31,9 @@ requirements:
     - tqdm
     - stanio >=0.4.0,<2.0.0
 
+test:
+  requires:
+    - python {{ python_min }}
 
 about:
   home: https://mc-stan.org/users/interfaces/cmdstan.html
